syntax = "proto3";

option go_package = "gitlab.com/ConsenSys/client/fr/core-stack/pkg.git/protos/common";

package common;

// Information about a Chain
message Chain {
    string id = 1; // Chain ID
    bool isEIP155 = 2; // Indicate if chain implements EIP155 (TODO: should be removed)
}